[gd_scene load_steps=7 format=3 uid="uid://drc5ahbsufdex"]

[ext_resource type="Script" uid="uid://d0jwxudm4eq13" path="res://scripts/counter_2.gd" id="1_ivo4p"]
[ext_resource type="Texture2D" uid="uid://ci6e045k26876" path="res://assets/sierrassets furniture pack/furniture/individual sprites/part-Slice 129.png" id="2_kn74g"]
[ext_resource type="PackedScene" uid="uid://10x4q8d16gbp" path="res://interaction_area.tscn" id="3_pq8gm"]
[ext_resource type="Texture2D" uid="uid://bov8hhgc63t5v" path="res://assets/ingredients/banana.png" id="4_uwbq1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnax2"]
size = Vector2(75, 13.125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gl2wf"]
size = Vector2(24.5, 64)

[node name="Counter2" type="StaticBody2D"]
texture_filter = 1
script = ExtResource("1_ivo4p")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_right = 77.0
offset_bottom = 40.0
texture = ExtResource("2_kn74g")
stretch_mode = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(37.5, 7.4375)
shape = SubResource("RectangleShape2D_mnax2")

[node name="InteractionArea" parent="." instance=ExtResource("3_pq8gm")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(26, 16)
shape = SubResource("RectangleShape2D_gl2wf")

[node name="Item" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 6.0
offset_right = 46.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_uwbq1")
expand_mode = 1
stretch_mode = 4

[node name="InteractionArea2" parent="." instance=ExtResource("3_pq8gm")]
position = Vector2(40, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea2"]
position = Vector2(11, 16)
shape = SubResource("RectangleShape2D_gl2wf")

[node name="Item2" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = 6.0
offset_right = 86.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_uwbq1")
expand_mode = 1
stretch_mode = 4
